--- a/content/extra/manifest.json
+++ b/content/extra/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "YOUR SITE NAME",
   "short_name": "YOUR SITE SHORT NAME",
-  "display": "minimal-ui",
+  "display": "standalone",
   "start_url": "/",
   "theme_color": "#673ab6",
   "background_color": "#111111",
